# SpecMatch

./: .gitignore  README.md  map_chemicals.py  metadata.yaml  model.onnx  pyproject.toml  requirements.txt  utils.py
models/m1/: metadata.yaml  model.onnx
