[project]
name = "specmatch-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "onnxruntime==1.20.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pyinstaller>=6.15.0",
    "pyqt5>=5.15.11",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "spectral>=0.24",
    "torch>=2.8.0",
]

[tool.uv]
constraint-dependencies = [
    "pyqt5-qt5<=5.15.2; sys_platform == 'win32'",
    "pyqt5-qt5>=5.15.16; sys_platform == 'linux'",
]
